# AXON

./: .env.example  .gitignore  AXON.docx  CLAUDE.md  HOWTO_LOCAL.md  README.md  package.json  pnpm-lock.yaml
.github/workflows/: ci.yml
ai-proxy/: pyproject.toml
ai-proxy/src/: config.py  db.py  main.py  pricing.py  schemas.py
ai-proxy/src/routes/: claude.py
ai-proxy/tests/: test_pricing.py
backend/: package.json  tsconfig.json
backend/src/: app.module.ts  health.controller.ts  main.ts
backend/src/audits/: audits.controller.ts  audits.module.ts  audits.service.ts  cost-summary.controller.ts
backend/src/common/: default-tenant.middleware.ts
backend/src/database/: data-source.ts  seed.ts  (+3 more)
docs/: API_DOCS.md  DATABASE.md  DESIGN_DECISIONS.md  FEATURES.md  RELEASE_NOTES.md  USER_GUIDE.md
docs/plans/: tier1-brand-audit-v1.md
frontend/: index.html  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.tsx
infra/cloudbuild/: provision.sh
infra/docker/: ai-proxy.Dockerfile  backend.Dockerfile  docker-compose.dev.yml  frontend.Dockerfile  nginx.conf  worker.Dockerfile
shared/: package.json  tsconfig.json
shared/types/: index.ts
worker/: pyproject.toml  run.py  sample_report.html
worker/pdf_sidecar/: package-lock.json  package.json  render.js
worker/src/: config.py  db.py  main.py
worker/src/enrichment/: client.py  enricher.py  prompts.py
worker/src/pdf/: renderer.py  storage.py  template.py
worker/src/pipeline/: orchestrator.py
worker/src/routes/: audits.py
worker/src/scoring/: engine.py  models.py  rubric.py
worker/src/scrape/: asin_discovery.py  brand_resolver.py  brand_store.py  browser.py  executor.py  parsers.py  pdp_scraper.py  reviews.py  selectors.py
worker/tests/: test_parsers.py  test_rubric.py
(+25 files in other folders)
